# Voice-Agent

./: .env.example  .gitignore  agents.json  calls.json  config.json  index.deepgram-backup.js  index.openai-realtime.js.bak  package-lock.json  package.json
admin/: package-lock.json  package.json  tailwind.config.ts
admin/src/app/: globals.css  layout.tsx  page.tsx
admin/src/app/agents/: page.tsx
admin/src/app/agents/[id]/: page.tsx
admin/src/app/agents/new/: page.tsx
admin/src/app/api/agents/: route.ts
admin/src/app/api/agents/[id]/: route.ts
admin/src/app/api/calls/: route.ts
admin/src/app/api/knowledge/delete/: route.ts
admin/src/app/api/knowledge/list/: route.ts
admin/src/app/api/knowledge/upload/: route.ts
admin/src/app/api/test-call/: route.ts
admin/src/app/calls/: page.tsx
admin/src/app/campaigns/: page.tsx
admin/src/app/campaigns/[id]/: page.tsx
admin/src/app/knowledge/: page.tsx
admin/src/app/test/: page.tsx
admin/src/components/: sidebar.tsx
admin/src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx  slider.tsx  textarea.tsx
admin/src/lib/: api.ts
knowledge/: d2d-sales-strategies.md  jj-roofing-company.md  psychology-roofing-sale.md  royalty-roofing-strategy.md
pipecat/: bot.py  db.py  pyproject.toml  server.py
