[project]
name = "roofing-voice-agent"
version = "0.1.0"
description = "Outbound roofing sales voice agent using Pipecat + Twilio"
requires-python = ">=3.10"
dependencies = [
  "pipecat-ai[cartesia,deepgram,groq,local-smart-turn-v3,openai,runner,silero,websocket]>=0.0.102",
  "twilio",
  "python-dotenv",
  "loguru",
  "httpx",
  "fastapi",
  "uvicorn",
]
